vcs/specs/parser/fail/statements/unclosed_provide_block.vr
// @test: parse-fail
// @level: L0
// @tags: parser, statements, provide, block, unclosed, error
// @description: Test provide statement with unclosed in block
// @expected-error: E011

fn test() {
    provide Database = db in {
        query();
}
